// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> renders with Small children 1`] = `
.emotion-1 {
  -webkit-font-smoothing: antialiased;
  color: rgb(5,25,45);
  font-family: sans-serif;
  font-family: Studio-Feixen-Sans-Variable;
  font-style: normal;
  font-size: 16px;
  font-weight: 400;
  line-height: 16px;
}

.emotion-0 {
  -webkit-font-smoothing: antialiased;
  color: rgb(5,25,45);
  font-family: sans-serif;
  font-family: Studio-Feixen-Sans-Variable;
  font-style: normal;
  font-size: 14px;
  line-height: 16px;
}

<span
  class="example-class emotion-1"
  data-cy="othertest"
  data-example="testdata"
>
  Some example text 
  <small
    class="emotion-0"
  >
    with strong
  </small>
   included.
</span>
`;

exports[`<Text /> renders with Strong children 1`] = `
.emotion-1 {
  -webkit-font-smoothing: antialiased;
  color: rgb(5,25,45);
  font-family: sans-serif;
  font-family: Studio-Feixen-Sans-Variable;
  font-style: normal;
  font-size: 16px;
  font-weight: 400;
  line-height: 16px;
}

.emotion-0 {
  -webkit-font-smoothing: antialiased;
  color: rgb(5,25,45);
  font-family: sans-serif;
  font-family: Studio-Feixen-Sans-Variable;
  font-style: normal;
  font-weight: 800;
  line-height: 16px;
}

<span
  class="example-class emotion-1"
  data-cy="othertest"
  data-example="testdata"
>
  Some example text 
  <strong
    class="emotion-0"
  >
    with strong
  </strong>
   included.
</span>
`;

exports[`<Text /> renders with a string 1`] = `
.emotion-0 {
  -webkit-font-smoothing: antialiased;
  color: rgb(5,25,45);
  font-family: sans-serif;
  font-family: Studio-Feixen-Sans-Variable;
  font-style: normal;
  font-size: 16px;
  font-weight: 400;
  line-height: 16px;
}

<span
  class="example-class emotion-0"
  data-cy="othertest"
  data-example="testdata"
>
  Some example text.
</span>
`;
